--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,9 @@
     "tests"
   ],
   "devDependencies": {
-    "fast-json-patch": "~0.5.0",
+    "fast-json-patch": "~0.5.0"
+  },
+  "dependencies":{
     "json-patch-queue": "PuppetJs/JSON-Patch-queue#gh-pages"
   }
 }
