--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "node": ">= 0.4.0"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
+    "grunt": "^0.4.5",
+    "grunt-bump": "^0.6.0",
     "grunt-contrib-uglify": "~0.5.0"
   }
 }
