--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "OT Agent/Queue for JSON-Patch OT - makes sure that your JSON Patches (RFC6902) gets transformed and applied in correct order",
   "main": "src/json-patch-ot-queue.js",
   "scripts": {
-    "test": "jasmine-node --matchall --config test/spec/coreSpec.js"
+    "test": "jasmine JASMINE_CONFIG_PATH=test/jasmine.json"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,10 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-bump": "^0.6.0",
-    "grunt-contrib-uglify": "~0.5.0"
+    "grunt-contrib-uglify": "~0.5.0",
+    "jasmine": "^2.4.1"
+  },
+  "dependencies": {
+    "json-patch-queue": "puppetjs/JSON-Patch-Queue#gh-pages"
   }
 }
