--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,6 @@
     "fast-json-patch": "~0.5.0"
   },
   "dependencies":{
-    "json-patch-queue": "PuppetJs/JSON-Patch-queue#gh-pages"
+    "json-patch-queue": "PuppetJs/JSON-Patch-queue#master"
   }
 }
