--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
     "jasmine": "^2.4.1"
   },
   "dependencies": {
-    "json-patch-queue": "puppetjs/JSON-Patch-Queue#gh-pages"
+    "json-patch-queue": "puppetjs/JSON-Patch-Queue#master"
   }
 }
