--- a/bower.json
+++ b/bower.json
@@ -20,8 +20,7 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests",
-    "gruntfile.js"
+    "tests"
   ],
   "devDependencies": {
     "fast-json-patch": "~0.5.0"
