--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "json-patch-ot-agent",
   "version": "1.1.0",
   "description": "OT Agent/Queue for JSON-Patch OT - makes sure that your JSON Patches (RFC6902) gets transformed and applied in correct order",
-  "main": "src/json-patch-ot-queue.js",
+  "main": "dist/json-patch-ot-agent.js",
+  "typings": "index.d.ts",
   "scripts": {
     "test": "jasmine JASMINE_CONFIG_PATH=test/jasmine.json"
   },
@@ -28,10 +29,8 @@
     "node": ">= 0.4.0"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-bump": "^0.6.0",
-    "grunt-contrib-uglify": "~0.5.0",
-    "jasmine": "^2.4.1"
+    "jasmine": "^2.4.1",
+    "webpack": "^2.2.1"
   },
   "dependencies": {
     "json-patch-queue": "palindrom/JSON-Patch-Queue#master"
