--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "json-patch-ot-agent",
-  "version": "1.1.0",
+  "version": "1.1.2",
   "homepage": "https://github.com/Palindrom/JSON-Patch-OT-agent",
   "description": "OT Agent/Queue for JSON-Patch OT - makes sure that your JSON Patches (RFC6902) gets transformed and applied in correct order",
   "authors": [
@@ -20,7 +20,8 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "gruntfile.js"
   ],
   "devDependencies": {
     "fast-json-patch": "~0.5.0"
