--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "json-patch-ot-agent",
-  "version": "1.1.0",
+  "version": "1.1.2",
   "description": "OT Agent/Queue for JSON-Patch OT - makes sure that your JSON Patches (RFC6902) gets transformed and applied in correct order",
-  "main": "dist/json-patch-ot-agent.js",
+  "main": "src/json-patch-ot-agent.js",
   "typings": "index.d.ts",
   "scripts": {
-    "test": "jasmine JASMINE_CONFIG_PATH=test/jasmine.json"
+    "test": "jasmine test/spec/*.js"
   },
   "repository": {
     "type": "git",
@@ -29,10 +29,11 @@
     "node": ">= 0.4.0"
   },
   "devDependencies": {
-    "jasmine": "^2.4.1",
-    "webpack": "^2.2.1"
+    "grunt": "^1.0.1",
+    "grunt-bump": "^0.8.0",
+    "jasmine": "^2.4.1"
   },
   "dependencies": {
-    "json-patch-queue": "palindrom/JSON-Patch-Queue#master"
+    "json-patch-queue": "^2.0.0"
   }
 }
