--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-bump": "^0.8.0",
-    "jasmine": "^2.4.1",
+    "jasmine": "^2.4.1"
   },
   "dependencies": {
     "json-patch-queue": "^2.0.0"
