--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
     "jasmine": "^2.4.1"
   },
   "dependencies": {
-    "json-patch-queue": "^2.0.0"
+    "json-patch-queue": "3.0.0-rc.0"
   }
 }
