--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "json-patch-ot-agent",
-  "version": "1.1.2",
+  "version": "2.0.0-rc.0",
   "description": "OT Agent/Queue for JSON-Patch OT - makes sure that your JSON Patches (RFC6902) gets transformed and applied in correct order",
   "main": "src/json-patch-ot-agent.js",
   "typings": "index.d.ts",
