--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "node": ">= 0.4.0"
   },
   "devDependencies": {
-    "grunt": "^1.0.1",
+    "benchmark": "^2.1.4",
+    "grunt": "^1.0.4",
     "grunt-bump": "^0.8.0",
-    "jasmine": "^2.4.1"
+    "jasmine": "^3.4.0"
   },
   "dependencies": {
     "json-patch-queue": "3.0.0-rc.0"
